added authentication and figured out how to configure identity more thoroughly

--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Home/Index.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Home/Index.cshtml
@@ -3,6 +3,13 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <p>Welcome @User.Identity.Name!</p>
+    }
+
+</div>
 
 <h2>Index</h2>
 <div>
