--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Account/Register.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Account/Register.cshtml
@@ -3,6 +3,7 @@
 <h2>Register</h2>
 
 <form asp-action="register" method="post">
+    <div asp-validation-summary="All"></div>
     <label asp-for="Email"></label>
     <input asp-for="Email" />
     <br />
@@ -12,8 +13,8 @@
     <label asp-for="ConfirmPassword"></label>
     <input asp-for="ConfirmPassword" />
     <br />
-    <label asp-for="RoleId"></label>
-    <select asp-for="RoleId" asp-items="@Model.Roles"></select>
+    <label asp-for="Role"></label>
+    <select asp-for="Role" asp-items="@Model.Roles"></select>
 
     <button type="submit">Register</button>
 </form>
