--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Account/Register.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Account/Register.cshtml
@@ -1,21 +1,24 @@
-﻿@model NesCollectorWebUI.ViewModels.RegisterViewModel
+﻿@model RegisterViewModel
 
-<h2>Register</h2>
+<div class="text-center">
 
-<form asp-action="register" method="post">
-    <div asp-validation-summary="All"></div>
-    <label asp-for="Email"></label>
-    <input asp-for="Email" />
-    <br />
-    <label asp-for="Password"></label>
-    <input asp-for="Password" />
-    <br />
-    <label asp-for="ConfirmPassword"></label>
-    <input asp-for="ConfirmPassword" />
-    <br />
-    <label asp-for="Role"></label>
-    <select asp-for="Role" asp-items="@Model.Roles"></select>
+    <h2 class="h3 mb-3 font-weight-normal">Register</h2>
 
-    <button type="submit">Register</button>
-</form>
+    <form class="form-signgin" asp-action="register" method="post">
+        <div asp-validation-summary="All"></div>
+        <label class="sr-only" asp-for="Email"></label>
+        <input class="form-control" asp-for="Email" />
+
+        <label class="sr-only" asp-for="Password"></label>
+        <input class="form-control" asp-for="Password" />
+  
+        <label class="sr-only" asp-for="ConfirmPassword"></label>
+        <input class="form-control" asp-for="ConfirmPassword" />
+    
+        <label asp-for="Role"></label>
+        <select asp-for="Role" asp-items="@Model.Roles"></select>
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+    </form>
+</div>
 
