--- a/NesCollectorWebUI/NesCollectorWebUI/Views/_ViewImports.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using NesCollectorWebUI
+@using NesCollectorWebUI.ViewModels
 @using NesCollectorWebUI.Models
+@using NesCollector.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
