started importing scheduler stuff

--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Account/LogIn.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Account/LogIn.cshtml
@@ -3,7 +3,7 @@
 <div class="text-center">
 
         <h2 class="h3 mb-3 font-weight-normal">Log In</h2>
-        <form class="form-signgin" asp-action="LogIn" method="post">
+        <form class="form-signin" asp-action="LogIn" method="post">
             <div asp-validation-summary="All"></div>
             <label class="sr-only" asp-for="Email"></label>
             <input class="form-control" asp-for="Email">
