--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Shared/_Layout.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="~/css/StyleSheet.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/Normalize.css">
+    <link rel="stylesheet" href="~/css/StyleSheet.css"/>
 
 </head>
 <body>
