--- a/NesCollectorWebUI/NesCollectorWebUI/wwwroot/sass/pages/register.scss
+++ b/NesCollectorWebUI/NesCollectorWebUI/wwwroot/sass/pages/register.scss
@@ -8,32 +8,31 @@ body {
     max-width: 330px;
     padding: 15px;
     margin: auto;
-}
 
-    .form-signin .checkbox {
+    .checkbox {
         font-weight: 400;
     }
 
-    .form-signin .form-control {
+    .form-control {
         position: relative;
         box-sizing: border-box;
         height: auto;
         padding: 10px;
         font-size: 16px;
-    }
 
-        .form-signin .form-control:focus {
+        &:focus {
             z-index: 2;
         }
+    }
 
-    .form-signin input[type="email"] {
+    input[type="email"] {
         margin-bottom: -1px;
         border-bottom-right-radius: 0;
         border-bottom-left-radius: 0;
     }
 
-
-    .form-signin input[type="password"] {
+    input[type="password"] {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
+}
