--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Home/Index.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Home/Index.cshtml
@@ -1,17 +1,25 @@
-﻿@model Game
+﻿
 
-@{
-    ViewData["Title"] = "Home Page";
-}
 <div>
     @if (User.Identity.IsAuthenticated)
     {
         <p>Welcome @User.Identity.Name!</p>
     }
 
+</div><div class="jumbotron">
+    <h1 class="display-4">Welcome to NesCollector!</h1>
+    <p class="lead">NesCollector is a free web app that helps you organize your NES collection, and determines its current market value. 
+    It can also help you organize your most wanted games for a quick reference for when you are out on the hunt!</p>
+
+    <hr class="my-4">
+    <p>Sign up for a free account today and give it a try!</p>
+    <a class="btn btn-primary btn-lg" asp-action="Register" asp-controller="Account" role="button">Sign up!</a>
 </div>
 
-<h2>Index</h2>
+
+
+
+ 
  
 
 
