improved update function

--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Admin/ListAllGames.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Admin/ListAllGames.cshtml
@@ -13,21 +13,25 @@
         <th>Genre</th>
         <th>Value (Loose)</th>
         <th>Value (Complete)</th>
+        <th>Edit</th>
+        <th>Delete</th>
         <th>Cover</th>
     </tr>
     @foreach (var g in Model)
     {
         if (g.Genre != "Systems" && g.Genre != "Controllers" && g.Genre != "Accessories")
         {
-        <tr>
-            <td>@g.Title</td>
-            <td>@g.Genre</td>
-            <td>$@g.LoosePrice.ToString("f2")</td>
-            <td>$@g.CibPrice.ToString("f2")</td>
-            <td>
-                <img class="game-cover"src="@g.CoverURL" alt="Cover Art" />
-            </td>
-        </tr>
+    <tr>
+        <td>@g.Title</td>
+        <td>@g.Genre</td>
+        <td>$@g.LoosePrice.ToString("f2")</td>
+        <td>$@g.CibPrice.ToString("f2")</td>
+        <td><a asp-action="Edit" asp-route-id="@g.Id">Edit</a></td>
+        <td><a asp-action="Delete" asp-route-id="@g.Id">Delete</a></td>
+        <td>
+            <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
+        </td>
+    </tr>
         }
     }
 
