--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Home/About.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Home/About.cshtml
@@ -2,6 +2,13 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p class="lead">
+    NesCollector is a free web app that helps you organize your NES collection, and determines its current market value.
+    It can also help you organize your most wanted games for a quick reference for when you are out on the hunt!
+</p>
+
+<hr class="my-4">
+<p>Sign up for a free account today and give it a try!</p>
+<a class="btn btn-primary btn-lg" asp-action="Register" asp-controller="Account" role="button">Sign up!</a>
