--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/AddGame.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/AddGame.cshtml
@@ -2,7 +2,9 @@
 
 
 <form asp-action="addGame" method="post" enctype="multipart/form-data">
+    <div>Choose a Game / Search from the dropdown menu</div>
     <input list="brow" asp-for="@Model.Game.Title">
+
     <div class="form-group">
         <datalist id="brow">
             @foreach (var g in Model.Games)
