--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/AddGame.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/AddGame.cshtml
@@ -1,5 +1,9 @@
 ﻿@model UserCollectionViewModel
 
+<div class="site-headline">
+    <img src="~/img/siteimg/addgame.jpg" alt="Headline" id="bigtitle">
+</div>
+
 
 <form asp-action="addGame" method="post" enctype="multipart/form-data">
     <div>Choose a Game / Search from the dropdown menu</div>
