--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Admin/ListAllGames.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Admin/ListAllGames.cshtml
@@ -3,11 +3,36 @@
     ViewData["Title"] = "ListAllGames";
 }
 
-<h2>List All Games</h2>
+<div class="site-headline">
+    <img src="~/img/siteimg/masterlistadmin.jpg" alt="Headline" id="bigtitle">
+</div>
 
 <a class="btn btn-primary" asp-action="create" role="button">Add a Game</a>
 
-<table class="table table-dark">
+
+
+<div class="row">
+    @foreach (var g in Model)
+    {
+        if (g.Genre != "Systems" && g.Genre != "Controllers" && g.Genre != "Accessories")
+        {
+            <div class="card">
+                <img class="card-img-top" id="game-cover" src="@g.CoverURL" alt="Cover Art" />
+                <div class="card-body">
+                    <h5 class="card-title">@g.Title</h5>
+                    <p class="card-text">Genre: @g.Genre</p>
+                    <p class="card-text">Loose Value: $@g.LoosePrice.ToString("f2")</p>
+                    <p class="card-text">Complete in Box Value: $@g.CibPrice.ToString("f2")</p>
+                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@g.Id">Edit</a>
+                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@g.Id">Delete</a>
+                </div>
+            </div>
+        }
+    }
+
+</div>
+
+@*<table class="table table-dark">
     <tr>
         <th>Title</th>
         <th>Genre</th>
@@ -21,19 +46,19 @@
     {
         if (g.Genre != "Systems" && g.Genre != "Controllers" && g.Genre != "Accessories")
         {
-    <tr>
-        <td>@g.Title</td>
-        <td>@g.Genre</td>
-        <td>$@g.LoosePrice.ToString("f2")</td>
-        <td>$@g.CibPrice.ToString("f2")</td>
-        <td><a asp-action="Edit" asp-route-id="@g.Id">Edit</a></td>
-        <td><a asp-action="Delete" asp-route-id="@g.Id">Delete</a></td>
-        <td>
-            <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
-        </td>
-    </tr>
+            <tr>
+                <td>@g.Title</td>
+                <td>@g.Genre</td>
+                <td>$@g.LoosePrice.ToString("f2")</td>
+                <td>$@g.CibPrice.ToString("f2")</td>
+                <td><a asp-action="Edit" asp-route-id="@g.Id">Edit</a></td>
+                <td><a asp-action="Delete" asp-route-id="@g.Id">Delete</a></td>
+                <td>
+                    <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
+                </td>
+            </tr>
         }
     }
 
 
-</table>
+</table>*@
