--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Home/Index.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Home/Index.cshtml
@@ -6,20 +6,56 @@
         <p>Welcome @User.Identity.Name!</p>
     }
 
-</div><div class="jumbotron">
-    <h1 class="display-4">Welcome to NesCollector!</h1>
-    <p class="lead">NesCollector is a free web app that helps you organize your NES collection, and determines its current market value. 
-    It can also help you organize your most wanted games for a quick reference for when you are out on the hunt!</p>
 
-    <hr class="my-4">
-    <p>Sign up for a free account today and give it a try!</p>
-    <a class="btn btn-primary btn-lg" asp-action="Register" asp-controller="Account" role="button">Sign up!</a>
+
+    <div class="site-headline">
+        <img src="~/img/siteimg/headline.jpg" alt="Headline" id="bigtitle">
+    </div>
+
+
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/img/carousel_img/carousel4.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/img/carousel_img/carousel5.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/img/carousel_img/carousel1.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/img/carousel_img/carousel2.jpg" alt="Fourth slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/img/carousel_img/carousel3.jpg" alt="Fifth slide">
+            </div>
+        </div>
+    </div>
+
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to NesCollector!</h1>
+        <p class="lead">
+            NesCollector is a free web app that helps you organize your NES collection, and determines its current market value.
+            It can also help you organize your most wanted games for a quick reference for when you are out on the hunt!
+        </p>
+
+
+        <hr class="my-4">
+        <p>Sign up for a free account today and give it a try!</p>
+        <a class="btn btn-primary btn-lg" asp-action="Register" asp-controller="Account" role="button">Sign up!</a>
+    </div>
+</div>
+
+<div>
+
 </div>
 
 
 
 
- 
- 
+
+
 
 
