--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Shared/_NavigationPartial.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Shared/_NavigationPartial.cshtml
@@ -4,9 +4,10 @@
         <li class="nav-item">
             <a class="nav-link active" asp-action="Index" asp-controller="Home">Home</a>
         </li>
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link active" asp-action="About" asp-controller="Home">About</a>
-        </li>
+        </li>*@
+
 
 
 
@@ -42,6 +43,10 @@
                 <li class="nav-item">
                     <a class="nav-link active" asp-action="ListWishlist" asp-controller="user">View / Edit Your Wishlist</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" asp-action="ListAllGames" asp-controller="user">Explore the NES Library</a>
+                </li>
+
             }
 
             <li class="nav-item">
