--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Account/LogIn.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Account/LogIn.cshtml
@@ -19,7 +19,7 @@
                 </label>
             </div>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+            <button class="btn btn-lg btn-primary btn-block" id="signupbtn" type="submit">Log in</button>
 
         </form>
 
