--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/Delete.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/Delete.cshtml
@@ -5,15 +5,16 @@
 }
 
 <h2>Delete from Collection</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-
-
-    <form asp-action="Delete">
-        <input type="submit" asp-action="Delete" value="Delete" class="btn btn-default" /> |
-        <a asp-action="ListUserGames">Back to Collection</a>
-    </form>
+<div class="addeditform">
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
 
 
-</div>
+        <form asp-action="Delete">
+            <input type="submit" asp-action="Delete" id="signupbtn" value="Delete" class="btn btn-primary" /> |
+            <input type="submit" asp-action="ListUserGames" id="signupbtn" class="btn btn-primary" value="Back To Collection" />
+        </form>
+
+
+    </div>
+    </div> 
