--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/DeleteWishlist.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/DeleteWishlist.cshtml
@@ -3,23 +3,24 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="addeditform">
+    <h2>Delete from Wishlist</h2>
 
-<h2>Delete from Wishlist</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-
-
-    @*<form asp-action="Delete">
-            <a class="btn btn-primary" asp-action="Delete" role="button">Delete</a>
-
-            <a asp-action="ListUserGames">Back to Collection</a>
-        </form>*@
-
-    <form asp-action="Delete">
-        <input type="submit" asp-action="DeleteWishlist" value="Delete" class="btn btn-default" /> |
-        <a asp-action="ListWishlist">Back to Wishlist</a>
-    </form>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
 
 
-</div>
+        @*<form asp-action="Delete">
+                <a class="btn btn-primary" asp-action="Delete" role="button">Delete</a>
+
+                <a asp-action="ListUserGames">Back to Collection</a>
+            </form>*@
+
+        <form asp-action="Delete">
+            <input type="submit" id="cardbtn" asp-action="DeleteWishlist" value="Delete" class="btn btn-default" /> |
+            <a asp-action="ListWishlist">Back to Wishlist</a>
+        </form>
+
+
+    </div>
+    </div> 
