--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/Edit.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/Edit.cshtml
@@ -3,25 +3,25 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<div class="addeditform">
+    <h2>Edit</h2>
 
-<h2>Edit</h2>
+    <form asp-action="edit" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+            <label asp-for="UserGame.Condition">Notes about the game's condition, i.e. "torn label"</label>
+            <input class="form-control" asp-for="UserGame.Condition" />
+        </div>
+        <div class="form-group">
+            <label asp-for="UserGame.HasBox">Does it have the box?</label>
+            @Html.RadioButtonFor(x => x.UserGame.HasBox, true) Yes
+            @Html.RadioButtonFor(x => x.UserGame.HasBox, false) No
+        </div>
+        <div class="form-group">
+            <label asp-for="UserGame.HasManual">Does it have the manual?</label>
+            @Html.RadioButtonFor(x => x.UserGame.HasManual, true) Yes
+            @Html.RadioButtonFor(x => x.UserGame.HasManual, false) No
+        </div>
+        <button type="submit" id="cardbtn" class="btn btn-primary">Edit Game</button>
 
-<form asp-action="edit" method="post" enctype="multipart/form-data">
-    <div class="form-group">
-        <label asp-for="UserGame.Condition">Notes about the game's condition, i.e. "torn label"</label>
-        <input class="form-control" asp-for="UserGame.Condition" />
+    </form>
     </div>
-    <div class="form-group">
-        <label asp-for="UserGame.HasBox">Does it have the box?</label>
-        @Html.RadioButtonFor(x => x.UserGame.HasBox, true) Yes
-        @Html.RadioButtonFor(x => x.UserGame.HasBox, false) No
-    </div>
-    <div class="form-group">
-        <label asp-for="UserGame.HasManual">Does it have the manual?</label>
-        @Html.RadioButtonFor(x => x.UserGame.HasManual, true) Yes
-        @Html.RadioButtonFor(x => x.UserGame.HasManual, false) No
-    </div>
-    <button type="submit" class="btn btn-primary">Edit Game</button>
-
-</form>
-
