--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/EditWishlist.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/EditWishlist.cshtml
@@ -2,15 +2,15 @@
 @{
     ViewData["Title"] = "EditWishlist";
 }
+<div class="addeditform">
+    <h2>Edit Wishlist</h2>
+    <form asp-action="editWishlist" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+            <input type="number" asp-for="Wishlist.MaxPrice" step="0.01">
+        </div>
 
-<h2>Edit Wishlist</h2>
-<form asp-action="editWishlist" method="post" enctype="multipart/form-data">
-    <div class="form-group">
-        <input type="number" asp-for="Wishlist.MaxPrice" step="0.01">
-    </div>
-    
-    <button type="submit" class="btn btn-primary">Edit Game</button>
+        <button type="submit" id="cardbtn" class="btn btn-primary">Edit Game</button>
 
-</form>
-
+    </form>
+</div>
 
