--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/ListUserGames.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/ListUserGames.cshtml
@@ -1,110 +1,114 @@
 ﻿@model UserCollectionViewModel
 
-    <div class="site-headline">
-        <img src="~/img/siteimg/viewcollection.jpg" alt="Headline" id="bigtitle">
-    </div>
+<div class="site-headline">
+    <img src="~/img/siteimg/viewcollection.jpg" alt="Headline" id="bigtitle">
+</div>
+<div class="centeredbutton"><a class="btn btn-primary" asp-action="AddGame" id="signupbtn" button">Add a Game to your Collection</a></div>
+ 
+<div class="card-container">
 
-    <a class="btn btn-primary" asp-action="AddGame" role="button">Add a Game to your Collection</a>
-    <div class="card-container">
-        @if (Model.UserGames.Count == 0)
-        {
-            <div class=" alert alert-secondary">
-                You don't have any games added to your collection yet!
-            </div>
+    @if (Model.UserGames.Count == 0)
+    {
+        <div class=" alert alert-secondary">
+            You don't have any games added to your collection yet!
+        </div>
 
-        }
-        else
-        {
+    }
+    else
+    {
+        <div class="totalvalue">
+            <p id="totalvalue">Your collection's total value is <div id="bigprice">$@Model.TotalValue.ToString("f2")!</div></p>
+        </div>
 
-            <p>Your collection's total value is $@Model.TotalValue.ToString("f2")!</p>
 
-            <div class="row">
+        <div class="row">
+            @foreach (var u in Model.UserGames)
+            {
+                @foreach (var g in Model.Games)
+                {
+                    if (u.GameId == g.Id)
+                    {
+                        <div class="card">
+                            <img class="card-img-top" id="game-cover" src="@g.CoverURL" alt="Cover Art" />
+                            <div class="card-body">
+                                <h5 class="card-title">@g.Title</h5><hr />
+                                <p class="card-text">Genre: @g.Genre</p>
+                                @if (u.HasBox && u.HasManual)
+                                {
+                                    <p class="card-text">Complete in box</p>
+                                }
+                                else if (u.HasBox && !u.HasManual)
+                                {
+                                    <p class="card-text">Box and cart</p>
+                                }
+                                else if (!u.HasBox && u.HasManual)
+                                {
+                                    <p class="card-text">Manual and cart only</p>
+                                }
+                                else
+                                {
+                                    <p class="card-text">Cart only</p>
+                                }
+                                <p class="card-text">Current Market Value: $@u.Value.ToString("f2")</p>
+                                <a class="btn btn-primary" asp-action="Edit" id="signupbtn" asp-route-id="@u.Id">Edit</a>
+                                <a class="btn btn-primary" asp-action="Delete" id="signupbtn" asp-route-id="@u.Id">Delete</a>
+                            </div>
+                        </div>
+                    }
+                }
+            }
+        </div>
+       
+
+
+        @*<table class="table table-dark">
+                <tr>
+                    <th>Title</th>
+                    <th>Genre</th>
+                    <th>Complete in box?</th>
+                    <th>Value</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                    <th>Cover</th>
+
+
+                </tr>
                 @foreach (var u in Model.UserGames)
                 {
                     @foreach (var g in Model.Games)
                     {
                         if (u.GameId == g.Id)
                         {
-                            <div class="card">
-                                <img class="card-img-top" id="game-cover" src="@g.CoverURL" alt="Cover Art" />
-                                <div class="card-body">
-                                    <h5 class="card-title">@g.Title</h5>
-                                    <p class="card-text">Genre: @g.Genre</p>
-                                    @if (u.HasBox && u.HasManual)
-                                    {
-                                        <p class="card-text">Complete in box</p>
-                                    }
-                                    else if (u.HasBox && !u.HasManual)
-                                    {
-                                        <p class="card-text">Box and cart</p>
-                                    }
-                                    else if (!u.HasBox && u.HasManual)
-                                    {
-                                        <p class="card-text">Manual and cart only</p>
-                                    }
-                                    else
-                                    {
-                                        <p class="card-text">Cart only</p>
-                                    }
-                                    <p class="card-text">Current Market Value: $@u.Value.ToString("f2")</p>
-                                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@u.Id">Edit</a>
-                                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@u.Id">Delete</a>
-                                </div>
-                            </div>
+                <tr>
+                    <td>@g.Title</td>
+                    <td>@g.Genre</td>
+                    @if (u.HasBox && u.HasManual)
+                    {
+                        <td>Complete in box</td>
+                    }
+                    else if (u.HasBox && !u.HasManual)
+                    {
+                        <td>Box and cart only</td>
+                    }
+                    else if (!u.HasBox && u.HasManual)
+                    {
+                        <td>Manual and cart only</td>
+                    }
+                    else
+                    {
+                        <td>Cart only</td>
+                    }
+                    <td>$@u.Value.ToString("f2")</td>
+                    <td><a asp-action="Edit" asp-route-id="@u.Id">Edit</a></td>
+                    <td><a asp-action="Delete" asp-route-id="@u.Id">Delete</a></td>
+                    <td>
+                        <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
+                    </td>
+
+                </tr>
                         }
                     }
                 }
-            </div>
 
-
-            @*<table class="table table-dark">
-                    <tr>
-                        <th>Title</th>
-                        <th>Genre</th>
-                        <th>Complete in box?</th>
-                        <th>Value</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                        <th>Cover</th>
-
-
-                    </tr>
-                    @foreach (var u in Model.UserGames)
-                    {
-                        @foreach (var g in Model.Games)
-                        {
-                            if (u.GameId == g.Id)
-                            {
-                    <tr>
-                        <td>@g.Title</td>
-                        <td>@g.Genre</td>
-                        @if (u.HasBox && u.HasManual)
-                        {
-                            <td>Complete in box</td>
-                        }
-                        else if (u.HasBox && !u.HasManual)
-                        {
-                            <td>Box and cart only</td>
-                        }
-                        else if (!u.HasBox && u.HasManual)
-                        {
-                            <td>Manual and cart only</td>
-                        }
-                        else
-                        {
-                            <td>Cart only</td>
-                        }
-                        <td>$@u.Value.ToString("f2")</td>
-                        <td><a asp-action="Edit" asp-route-id="@u.Id">Edit</a></td>
-                        <td><a asp-action="Delete" asp-route-id="@u.Id">Delete</a></td>
-                        <td>
-                            <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
-                        </td>
-
-                    </tr>
-                            }
-                        }
-                    }
-
-                </table>*@
-        }
+            </table>*@
+    }
