--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/ListWishlist.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/ListWishlist.cshtml
@@ -3,8 +3,9 @@
 <div class="site-headline">
     <img src="~/img/siteimg/viewwishlist.jpg" alt="Headline" id="bigtitle">
 </div>
-
-<a class="btn btn-primary" asp-action="AddWishlist" role="button">Add a Game to your Wishlist</a>
+<div class="centeredbutton">
+    <a class="btn btn-primary" asp-action="AddWishlist" id="signupbtn" role="button">Add a Game to your Wishlist</a>
+</div>
 
 @if (Model.UserWishlist.Count == 0)
 {
@@ -15,63 +16,64 @@
 }
 else
 {
-
-    <div class="row">
-        @foreach (var w in Model.UserWishlist)
-        {
-            @foreach (var g in Model.Games)
-            {
-                if (w.GameId == g.Id)
-                {
-                    <div class="card">
-                        <img class="card-img-top" id="game-cover" src="@g.CoverURL" alt="Cover Art" />
-                        <div class="card-body">
-                            <h5 class="card-title">@g.Title</h5>
-                            <p class="card-text">Genre: @g.Genre</p>
-                            <p class="card-text">Max Price: @w.MaxPrice</p>
-                            <p class="card-text">Current Market Value (complete): $@g.CibPrice.ToString("f2")</p>
-                            <p class="card-text">Current Market Value (loose): $@g.LoosePrice.ToString("f2")</p>
-                            <a class="btn btn-primary" asp-action="EditWishlist" asp-route-id="@w.Id">Edit</a>
-                            <a class="btn btn-primary" asp-action="DeleteWishlist" asp-route-id="@w.Id">Delete</a>
-                        </div>
-                    </div>
-                }
-            }
-        }
-    </div>
-
-
-    @*<table class="table table-dark">
-            <tr>
-                <th>Title</th>
-                <th>Genre</th>
-                <th>Max Price</th>
-                <th>Edit</th>
-                <th>Delete</th>
-                <th>Cover</th>
-
-
-            </tr>
+    <div class="card-container">
+        <div class="row">
             @foreach (var w in Model.UserWishlist)
             {
                 @foreach (var g in Model.Games)
-
                 {
                     if (w.GameId == g.Id)
                     {
-                        <tr>
-                            <td>@g.Title</td>
-                            <td>@g.Genre</td>
-                            <td>$@w.MaxPrice</td>
-                            <td><a asp-action="EditWishlist" asp-route-id="@w.Id">Edit</a></td>
-                            <td><a asp-action="DeleteWishlist" asp-route-id="@w.Id">Delete</a></td>
-                            <td>
-                                <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
-                            </td>
-                        </tr>
+                        <div class="card">
+                            <img class="card-img-top" id="game-cover" src="@g.CoverURL" alt="Cover Art" />
+                            <div class="card-body">
+                                <h5 class="card-title">@g.Title</h5>
+                                <p class="card-text">Genre: @g.Genre</p>
+                                <p class="card-text">Max Price you're willing to pay: $@w.MaxPrice</p>
+                                <p class="card-text">Current Market Value (complete): $@g.CibPrice.ToString("f2")</p>
+                                <p class="card-text">Current Market Value (loose): $@g.LoosePrice.ToString("f2")</p>
+                                <a class="btn btn-primary" asp-action="EditWishlist" id="cardbtn" asp-route-id="@w.Id">Edit</a>
+                                <a class="btn btn-primary" asp-action="DeleteWishlist" id="cardbtn" asp-route-id="@w.Id">Delete</a>
+                            </div>
+                        </div>
                     }
                 }
             }
+        </div>
+        </div>
 
-        </table>*@
-}
+
+        @*<table class="table table-dark">
+                <tr>
+                    <th>Title</th>
+                    <th>Genre</th>
+                    <th>Max Price</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                    <th>Cover</th>
+
+
+                </tr>
+                @foreach (var w in Model.UserWishlist)
+                {
+                    @foreach (var g in Model.Games)
+
+                    {
+                        if (w.GameId == g.Id)
+                        {
+                            <tr>
+                                <td>@g.Title</td>
+                                <td>@g.Genre</td>
+                                <td>$@w.MaxPrice</td>
+                                <td><a asp-action="EditWishlist" asp-route-id="@w.Id">Edit</a></td>
+                                <td><a asp-action="DeleteWishlist" asp-route-id="@w.Id">Delete</a></td>
+                                <td>
+                                    <img class="game-cover" src="@g.CoverURL" alt="Cover Art" />
+                                </td>
+                            </tr>
+                        }
+                    }
+                }
+
+            </table>*@
+        }
