--- a/NesCollectorWebUI/NesCollectorWebUI/wwwroot/sass/components/card.scss
+++ b/NesCollectorWebUI/NesCollectorWebUI/wwwroot/sass/components/card.scss
@@ -1,22 +1,33 @@
 ﻿.card {
     margin: 20px;
-    width: 250px;
-    margin: 0 auto;  
-    float: none;  
-    margin-bottom: 10px;  
+    width: 275px;
+    margin: 0 auto;
+    float: none;
+    margin-bottom: 10px;
+    text-align:center;
 }
 
 
 .card-container {
-    width: 80%;
+    width: 85%;
     margin: auto;
 }
 
 .game-listing {
-    width: 250px;
+    width: 275px;
     color: red;
 }
 
 #game-cover {
-    width: 250px;
+    width: 275px;
+}
+
+#cardbtn {
+    text-align: center;
+    margin: 0 auto;
+    font-family: '8BITWONDERNominal';
+    font-weight: normal;
+    background-color: #dc3d1d;
+    margin-bottom: 20px;
+    font-size: 14px;
 }
