--- a/NesCollectorWebUI/NesCollectorWebUI/wwwroot/sass/components/nav.scss
+++ b/NesCollectorWebUI/NesCollectorWebUI/wwwroot/sass/components/nav.scss
@@ -5,7 +5,8 @@
     font-weight: normal;
     font-style: normal;
     background-image: linear-gradient(red, black);
-    border-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 #navwrapper {
     text-align: center;
