--- a/NesCollectorWebUI/NesCollectorWebUI/Views/Admin/ListAllGames.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/Admin/ListAllGames.cshtml
@@ -22,8 +22,8 @@
                         <p class="card-text">Genre: @g.Genre</p>
                         <p class="card-text">Loose Value: $@g.LoosePrice.ToString("f2")</p>
                         <p class="card-text">Complete in Box Value: $@g.CibPrice.ToString("f2")</p>
-                        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@g.Id">Edit</a>
-                        <a class="btn btn-primary" asp-action="Delete" asp-route-id="@g.Id">Delete</a>
+                        <a class="btn btn-primary" id="cardbtn" asp-action="Edit" asp-route-id="@g.Id">Edit</a>
+                        <a class="btn btn-primary" id="cardbtn" asp-action="Delete" asp-route-id="@g.Id">Delete</a>
                     </div>
                 </div>
 
