--- a/NesCollectorWebUI/NesCollectorWebUI/Views/User/DeleteWishlist.cshtml
+++ b/NesCollectorWebUI/NesCollectorWebUI/Views/User/DeleteWishlist.cshtml
@@ -18,7 +18,7 @@
 
         <form asp-action="Delete">
             <input type="submit" id="cardbtn" asp-action="DeleteWishlist" value="Delete" class="btn btn-default" /> |
-            <a asp-action="ListWishlist">Back to Wishlist</a>
+            <input type="submit" asp-action="ListWishlist" id="signupbtn" class="btn btn-primary" value="Back To Wishlist" />
         </form>
 
 
